fixtypo in signup.jade

--- a/core/view/signup.jade
+++ b/core/view/signup.jade
@@ -29,4 +29,4 @@ block main
 prepend sidebar
   .row
     header= t('view.signup.alreadySignup')
-    a.btn.btn-lg.btn-success(href='/account/login/')= t('word.login')
+    a.btn.btn-lg.btn-success(href='/user/login/')= t('word.login')
