--- a/core/static/style/layout.less
+++ b/core/static/style/layout.less
@@ -4,23 +4,25 @@ body {
   font-size: 16px;
 
   >header {
-    background-color: #8BC84B;
+    background: #563d7c;
 
     nav.navbar {
       margin-bottom: 0;
     }
 
     nav.navbar-inverse {
-      background-color: #8BC84B;
+      background: #563d7c;
       border: none;
     }
 
-    .navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav>li>a {
-      color: #46483e;
-    }
+    .navbar-inverse {
+      .navbar-brand, .navbar-nav>li>a {
+        color: #fff;
+      }
 
-    .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus {
-      background-color: #73a53e;
+      .navbar-nav>.active>a, .navbar-nav>.active>a:hover, .navbar-nav>.active>a:focus {
+        background-color: #463265;
+      }
     }
   }
 
@@ -34,6 +36,16 @@ body {
 
     .row {
       margin-bottom: 35px;
+
+      .form-group {
+        .col-sm-offset-3 button {
+          margin: 6px 12px;
+        }
+
+        .col-sm-9 {
+          padding-left: 5px;
+        }
+      }
     }
 
     #sidebar {
@@ -51,16 +63,6 @@ body {
           margin: 0 10px;
         }
       }
-    }
-  }
-
-  .form-group {
-    .col-sm-offset-3 button {
-      margin: 6px 12px;
-    }
-
-    .col-sm-9 {
-      padding-left: 5px;
     }
   }
 }
