注册，验证表单小模块

--- a/core/static/style/layout.less
+++ b/core/static/style/layout.less
@@ -3,6 +3,9 @@ body {
   font-family: "WenQuanYi Micro Hei", "WenQuanYi Zen Hei", "Microsoft YaHei", arial, sans-serif;
   font-size: 16px;
 
+  #page-alert {
+    display: none;
+  }
   >header {
     background: #563d7c;
 
