--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -29,6 +29,8 @@ html
     #content.container
       .row
         .col-md-9
+          .alert#page-alert
+            button(type='button',class='close') &times;
           block main
 
         #sidebar.col-md-3
@@ -41,3 +43,5 @@ html
       script(src='http://cdn.staticfile.org/jquery/2.0.3/jquery.min.js')
       script(src='http://cdn.staticfile.org/twitter-bootstrap/3.0.0-rc2/js/bootstrap.min.js')
       script(src='/script/layout.js')
+
+      block script
