--- a/core/view/signup.jade
+++ b/core/view/signup.jade
@@ -5,7 +5,7 @@ prepend head
 
 block main
   header= t('word.signup')
-  form.form-horizontal(method='post', role='form')
+  form.form-horizontal.signup-form(method='post', role='form')
     .form-group
       label.col-sm-2.col-md-offset-1.control-label(for='username')= t('word.username')
       .col-sm-5
@@ -30,3 +30,6 @@ prepend sidebar
   .row
     header= t('view.signup.alreadySignup')
     a.btn.btn-lg.btn-success(href='/user/login/')= t('word.login')
+
+append script
+  script(src='/script/user/signup.js')
