--- a/core/view/signup.jade
+++ b/core/view/signup.jade
@@ -32,4 +32,5 @@ prepend sidebar
     a.btn.btn-lg.btn-success(href='/user/login/')= t('word.login')
 
 append script
+  script(src='/script/base/checkAndRequest.js')
   script(src='/script/user/signup.js')
