--- a/core/view/login.jade
+++ b/core/view/login.jade
@@ -16,9 +16,14 @@ block main
         input#passwd.form-control(type='password', name='passwd', required)
     .form-group
       .col-sm-offset-3
-        button.btn.btn-lg.btn-primary(type='submit')= t('word.login')
+        button#login-btn.btn.btn-lg.btn-primary(type='submit')= t('word.login')
 
 prepend sidebar
   .row
     header= t('view.login.noAccount')
     a.btn.btn-lg.btn-success(href='/user/signup/')= t('word.signup')
+
+
+append script
+  script(src='/script/base/checkAndRequest.js')
+  script(src='/script/user/login.js')
