--- a/core/view/login.jade
+++ b/core/view/login.jade
@@ -21,9 +21,9 @@ block main
 prepend sidebar
   .row
     header= t('view.login.noAccount')
-    a.btn.btn-lg.btn-success(href='/user/signup/')= t('word.signup')
+    a.btn.btn-lg.btn-success(href='/account/signup/')= t('word.signup')
 
 
 append script
   script(src='/script/base/checkAndRequest.js')
-  script(src='/script/user/login.js')
+  script(src='/script/account/login.js')
