--- a/core/view/signup.jade
+++ b/core/view/signup.jade
@@ -29,8 +29,8 @@ block main
 prepend sidebar
   .row
     header= t('view.signup.alreadySignup')
-    a.btn.btn-lg.btn-success(href='/user/login/')= t('word.login')
+    a.btn.btn-lg.btn-success(href='/account/login/')= t('word.login')
 
 append script
   script(src='/script/base/checkAndRequest.js')
-  script(src='/script/user/signup.js')
+  script(src='/script/account/signup.js')
