--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -21,7 +21,7 @@ html
               li
                 a(href='/topnav1/') Top Nav1
             ul.nav.navbar-nav.navbar-right
-              if user
+              if account
                 li
                   a= user.data.username
                 li
@@ -30,9 +30,9 @@ html
                   a(href='/account/logout/')= t('word.logout')
               else
                 li
-                  a(href='/user/signup/')= t('word.signup')
+                  a(href='/account/signup/')= t('word.signup')
                 li
-                  a(href='/user/login/')= t('word.login')
+                  a(href='/account/login/')= t('word.login')
 
     #content.container
       .row
