--- a/core/view/signup.jade
+++ b/core/view/signup.jade
@@ -24,7 +24,7 @@ block main
         input#passwd2.form-control(type='password', name='passwd2', required)
     .form-group
       .col-sm-offset-3
-        button.btn.btn-lg.btn-primary(type='submit')= t('word.signup')
+        button.signup-btn.btn.btn-lg.btn-primary(type='submit')= t('word.signup')
 
 prepend sidebar
   .row
@@ -32,5 +32,4 @@ prepend sidebar
     a.btn.btn-lg.btn-success(href='/account/login/')= t('word.login')
 
 append script
-  script(src='/script/base/checkAndRequest.js')
   script(src='/script/account/signup.js')
