--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -47,6 +47,14 @@ html
               header= t('app.name')
               p= t('app.description')
 
+            .row
+              header Version
+              ul
+                li Version: #{app.locals.version.version.slice(0, 10)}
+                li Author: #{app.locals.version.author}
+                li= app.locals.version.time.toJSON()
+                li= app.locals.version.message
+
     #footer
       script(src='http://cdn.staticfile.org/jquery/2.0.3/jquery.min.js')
       script(src='http://cdn.staticfile.org/twitter-bootstrap/3.0.0-rc2/js/bootstrap.min.js')
