--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -4,7 +4,7 @@ html
     meta(charset='utf-8')
     block head
       link(rel='stylesheet', href='http://cdn.staticfile.org/twitter-bootstrap/3.0.0-rc2/css/bootstrap.min.css')
-      link(rel='stylesheet', href='/style/layout.css')
+      link(rel='stylesheet', href='/style/layout/layout.css')
   body
     header.navbar-fixed-top
       .container
@@ -59,5 +59,5 @@ html
       script(src='http://cdn.staticfile.org/jquery/2.0.3/jquery.min.js')
       script(src='http://cdn.staticfile.org/twitter-bootstrap/3.0.0-rc2/js/bootstrap.min.js')
       script(src='/script/base/ErrorHandle.js')
-      script(src='/script/layout.js')
+      script(src='/script/layout/layout.js')
       block script
