remove block script

--- a/core/view/login.jade
+++ b/core/view/login.jade
@@ -24,5 +24,5 @@ prepend sidebar
     a.btn.btn-lg.btn-success(href='/account/signup/')= t('word.signup')
 
 
-append script
+append footer
   script(src='/script/account/login.js')
