--- a/core/view/signup.jade
+++ b/core/view/signup.jade
@@ -31,5 +31,5 @@ prepend sidebar
     header= t('view.signup.alreadySignup')
     a.btn.btn-lg.btn-success(href='/account/login/')= t('word.login')
 
-append script
+append footer
   script(src='/script/account/signup.js')
