--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     block head
-      link(rel='stylesheet', href='http://cdn.staticfile.org/twitter-bootstrap/3.0.0-rc2/css/bootstrap.min.css')
+      link(rel='stylesheet', href='http://cdn.staticfile.org/twitter-bootstrap/3.0.3/css/bootstrap.min.css')
       link(rel='stylesheet', href='/style/layout/layout.css')
   body
     header.navbar-fixed-top
@@ -57,7 +57,8 @@ html
                   li= app.locals.version.message
 
     #footer
+      block footer
       script(src='http://cdn.staticfile.org/jquery/2.0.3/jquery.min.js')
-      script(src='http://cdn.staticfile.org/twitter-bootstrap/3.0.0-rc2/js/bootstrap.min.js')
+      script(src='http://cdn.staticfile.org/twitter-bootstrap/3.0.3/js/bootstrap.min.js')
       script(src='/script/base/ErrorHandle.js')
       script(src='/script/layout/layout.js')
