--- a/core/view/panel.jade
+++ b/core/view/panel.jade
@@ -1,7 +1,10 @@
 extends layout
 
 prepend head
-  title #{t("word.panel")} | #{t('app.name')}
+  title #{t('word.panel')} | #{t('app.name')}
+
+append head
+  link(rel='stylesheet', href='/style/panel/panel.css')
 
 block content
   #content.container
@@ -9,13 +12,13 @@ block content
       #sidenav.col-md-3
         ul.nav.nav-pills.nav-stacked
           li.active
-            a(href='#') 1
-          li 
-            a(href='#') 2
+            a(href='/panel/')
+              span.glyphicon.pull-right.glyphicon-home
+              | #{t('word.panel')}
           li
-            a(href='#') 3
-          li
-            a(href='#') 4
+            a(href='/ticket/list/')
+              span.glyphicon.pull-right.glyphicon-edit
+              | #{t('word.ticket')}
       
       .col-md-9
         h2 Panel
