没有数据的时候不显示版本信息

--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -47,14 +47,15 @@ html
               .row
                 header= t('app.name')
                 p= t('app.description')
-  
-              .row
-                header Version
-                ul
-                  li Version: #{app.locals.version.version.slice(0, 10)}
-                  li Author: #{app.locals.version.author}
-                  li= app.locals.version.time.toJSON()
-                  li= app.locals.version.message
+
+              if app?.locals?.version
+                .row
+                  header Version
+                  ul
+                    li Version: #{app.locals.version.version.slice(0, 10)}
+                    li Author: #{app.locals.version.author}
+                    li= app.locals.version.time.toJSON()
+                    li= app.locals.version.message
 
     #footer
       block footer
