新建工单按钮 && fixbug

--- a/core/view/panel.jade
+++ b/core/view/panel.jade
@@ -18,7 +18,7 @@ block content
           li
             a(href='/ticket/list/')
               span.glyphicon.pull-right.glyphicon-edit
-              | #{t('word.ticket')}
+              | #{t('word.ticket/')}
       
       .col-md-9
         h2 Panel
