--- a/core/view/ticket/create.jade
+++ b/core/view/ticket/create.jade
@@ -7,7 +7,7 @@ prepend head
 block main
   header= t('view.ticket.word.create')
 
-  form.form-horizontal#create-ticket(method='post', role='form')
+  form.form-horizontal(method='post', role='form')
     .form-group
       .col-sm-3
         select#type.form-control(name='type')
@@ -19,7 +19,7 @@ block main
       textarea#content.form-control(name='content', rows='15', required)
     .form-group
       .col-sm-offset-3
-        button.btn.btn-lg.btn-primary(type='submit')= t('word.create')
+        button.btn.btn-lg.btn-primary#create-ticket(type='submit')= t('word.create')
 
 
 append footer
