--- a/core/view/ticket/create.jade
+++ b/core/view/ticket/create.jade
@@ -16,7 +16,7 @@ block main
       .col-sm-9
         input#title.form-control(type='text', name='title', required)
     .form-group.contentarea
-      textarea#content.form-control(name='content', rows='15', required)
+      textarea#ticket-content.form-control(name='content', rows='15', required)
     .form-group
       .col-sm-offset-3
         button.btn.btn-lg.btn-primary#create-ticket(type='submit')= t('word.create')
