add ticket address

--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -38,8 +38,7 @@ html
       #content.container
         .row
           .col-md-9
-            .alert#page-alert
-              button(type='button',class='close') &times;
+            .alert.alert-danger#page-alert
             block main
 
           #sidebar.col-md-3
