fix bugs in view

--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -23,7 +23,7 @@ html
             ul.nav.navbar-nav.navbar-right
               if account
                 li
-                  a= account.data.username
+                  a= account.username
                 li
                   a(href='/panel/')= t('word.panel')
                 li
