--- a/core/view/ticket/create.jade
+++ b/core/view/ticket/create.jade
@@ -2,7 +2,7 @@ extends ../layout
 
 prepend head
   title #{t('view.ticket.word.create')} | #{t('app.name')}
-  link(rel='stylesheet', href='/style/ticket/create.css')
+  link(rel='stylesheet', href='/style/ticket.css')
 
 block main
   header= t('view.ticket.word.create')
