--- a/core/view/ticket/create.jade
+++ b/core/view/ticket/create.jade
@@ -1,11 +1,11 @@
 extends ../layout
 
 prepend head
-  title #{t('view.ticket.word.create')} | #{t('app.name')}
+  title #{t('ticket.create_ticket')} | #{t('app.name')}
   link(rel='stylesheet', href='/style/ticket.css')
 
 block main
-  header= t('view.ticket.word.create')
+  header= t('ticket.create_ticket')
 
   form.form-horizontal(method='post', role='form')
     .form-group
@@ -19,8 +19,7 @@ block main
       textarea#ticket-content.form-control(name='content', rows='15', required)
     .form-group
       .col-sm-offset-3
-        button.btn.btn-lg.btn-primary#create-ticket(type='submit')= t('word.create')
-
+        button.btn.btn-lg.btn-primary#create-ticket(type='submit')= t('ticket.create')
 
 append footer
   script(src='/script/ticket/create.js')
