在 Ticket 页面加上用户信息

--- a/core/static/style/ticket.less
+++ b/core/static/style/ticket.less
@@ -5,3 +5,16 @@
 .list-group-item a {
   margin-right: 10px;
 }
+
+.list-group-item img {
+  width: 58px;
+  height: 58px;
+}
+
+.list-content {
+  margin-left: 68px;
+}
+
+.label {
+  margin-right: 5px;
+}
