美化创建工单页面

--- a/core/static/style/ticket.less
+++ b/core/static/style/ticket.less
@@ -1,20 +1,22 @@
-.form-group {
+.form-group.padding {
   padding: 6px 12px;
 }
 
-.list-group-item a {
-  margin-right: 10px;
-}
+.list-group-item {
+  a {
+    margin-right: 10px;
+  }
 
-.list-group-item img {
-  width: 58px;
-  height: 58px;
-}
+  img {
+    width: 58px;
+    height: 58px;
+  }
 
-.list-content {
-  margin-left: 68px;
-}
+  .list-content {
+    margin-left: 68px;
 
-.label {
-  margin-right: 5px;
+    .label {
+      margin-right: 5px;
+    }
+  }
 }
