--- a/core/view/ticket/list.jade
+++ b/core/view/ticket/list.jade
@@ -22,4 +22,4 @@ block main
 
 prepend sidebar
   .row
-    a.btn.btn-lg.btn-success(href='/ticket/create/')= t('ticket.create_reply')
+    a.btn.btn-lg.btn-success(href='/ticket/create/')= t('ticket.create_ticket')
