--- a/core/view/account/login.jade
+++ b/core/view/account/login.jade
@@ -4,7 +4,7 @@ prepend head
   title #{t('account.login')} | #{t('app.name')}
 
 block main
-  header= t('word.login')
+  header= t('account.login')
   form.form-horizontal(method='post', role='form')
     .form-group
       label.col-sm-2.col-md-offset-1.control-label(for='username')= t('account.username')
