--- a/core/view/panel.jade
+++ b/core/view/panel.jade
@@ -4,7 +4,7 @@ prepend head
   title #{t('panel.')} | #{t('app.name')}
 
 append head
-  link(rel='stylesheet', href='/style/panel/panel.css')
+  link(rel='stylesheet', href='/style/panel.css')
 
 block content
   #content.container
@@ -41,3 +41,36 @@ block content
                       button.btn.btn-danger.btn-sm= t('plan.unsubscribe')
                     else
                       button.btn.btn-success.btn-sm= t('plan.subscribe')
+
+        .row
+          header SSH
+          .col-md-6
+            .panel.panel-warning
+              .panel-heading
+                 h3.panel-title 设置 SSH 密码
+              .panel-body
+                .input-group
+                  input.form-control(type='password')
+                  span.input-group-btn
+                    button.btn.btn-default(type='button') 提交
+          .col-md-6
+            table.table.table-hover
+              thead
+                tr
+                  td 进程名
+                  td 内存
+                  td CPU
+                  td 操作
+              tbody
+                tr
+                  td sshd
+                  td 5M
+                  td 1%
+                  td
+                    button.btn.btn-danger.btn-xs Kill
+                tr
+                  td node
+                  td 10M
+                  td 2%
+                  td
+                    button.btn.btn-danger.btn-xs Kill
