--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -19,7 +19,13 @@ html
           #navbar-collapse.collapse.navbar-collapse
             ul.nav.navbar-nav
               li
-                a(href='/topnav1/') Top Nav1
+                a(href='/public/services/') 功能支持
+              li
+                a(href='/public/wiki/') 用户手册
+              li
+                a(href='/public/monitor/') 服务器状态
+              li
+                a(href='//blog.rpvhost.net', target='_blank') 官方博客
             ul.nav.navbar-nav.navbar-right
               if account
                 li
@@ -53,4 +59,3 @@ html
       script(src='/script/base/ErrorHandle.js')
       script(src='/script/layout/layout.js')
       block footer
-
