工单状态变更完成 加入成功信息提示

--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -45,6 +45,7 @@ html
         .row
           .col-md-9
             #page-alert.alert.alert-danger
+            #page-success.alert.alert-success
             block main
 
           #sidebar.col-md-3
