--- a/core/static/style/layout/layout.less
+++ b/core/static/style/layout/layout.less
@@ -3,9 +3,11 @@ body {
   font-family: "WenQuanYi Micro Hei", "WenQuanYi Zen Hei", "Microsoft YaHei", arial, sans-serif;
   font-size: 16px;
 
-  #page-alert {
+  #page-alert,
+  #page-success {
     display: none;
   }
+
 
   > header {
     background: #563d7c;
