完成用户手册的显示

--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -21,7 +21,7 @@ html
               li
                 a(href='/public/services/') 功能支持
               li
-                a(href='/public/wiki/') 用户手册
+                a(href='/wiki/') 用户手册
               li
                 a(href='/public/monitor/') 服务器状态
               li
