充值页面草稿

--- a/core/view/panel.jade
+++ b/core/view/panel.jade
@@ -23,12 +23,14 @@ block content
       .col-md-9
         #page-alert.alert.alert-danger
         #page-success.alert.alert-success
-        
+
         .row
           header= t('panel.overview')
           p
             | #{t('plan.balance')}: #{account.attribute.balance.toFixed(2)} #{t('plan.currency.cny')}
             | #{t('plan.remaining_time')}: #{account.attribute.remaining_time} #{t('time.day')}
+          p
+            a(href= '/panel/pay/').btn.btn-success 充值
 
         .row
           header= t('plan.')
