--- a/plugin/linux/view/widget.jade
+++ b/plugin/linux/view/widget.jade
@@ -1,1 +1,23 @@
 header Linux
+table.table.table-hover
+  tbody
+    tr
+      td(style='width: 200px;') 2 小时 CPU 时间
+      td
+        .progress
+          .progress-bar.progress-bar-success(role='progressbar', aria-valuenow='20', aria-valuemin='0', aria-valuemax='100', style='width: 20%;') 29 / 144 s
+    tr
+      td 2 小时内存占用
+      td
+        .progress
+          .progress-bar.progress-bar-success(role='progressbar', aria-valuenow='85', aria-valuemin='0', aria-valuemax='100', style='width: 85%;') 23 / 27 M
+    tr
+      td 储存空间
+      td
+        .progress
+          .progress-bar.progress-bar-success(role='progressbar', aria-valuenow='10', aria-valuemin='0', aria-valuemax='100', style='width: 10%;') 52 / 520 M
+    tr
+      td 月流量
+      td
+        .progress
+          .progress-bar.progress-bar-success(role='progressbar', aria-valuenow='10', aria-valuemin='0', aria-valuemax='100', style='width: 10%;') 4 / 39G
