finish php-fpm change status

--- a/plugin/phpfpm/view/widget.jade
+++ b/plugin/phpfpm/view/widget.jade
@@ -1,5 +1,5 @@
 header PHP-FPM
 if isEnable
-  button.btn.btn-danger 关闭
+  button.btn.btn-danger#php-fpm 关闭
 else
-  button.btn.btn-success 运行
+  button.btn.btn-success#php-fpm 运行
