--- a/plugin/phpfpm/view/widget.jade
+++ b/plugin/phpfpm/view/widget.jade
@@ -1,5 +1,5 @@
 header PHP-FPM
-if isEnable
+if account.attribute.plugin.phpfpm.is_enable
   button.btn.btn-danger#php-fpm 关闭
 else
   button.btn.btn-success#php-fpm 运行
