让被关闭的工单有更美观的提示

--- a/core/view/ticket/view.jade
+++ b/core/view/ticket/view.jade
@@ -7,12 +7,6 @@ prepend head
 block main
   .row#ticketid(data-id= '#{ticket._id}')
     header= ticket.title
-    //- 等pending改好后可以统一处理，这里先用case
-    case ticket.status
-      when 'open'
-        span.btn-success(role='btn') 打开的
-      when 'closed'
-        span.btn-danger(role='btn') 关闭的
     p!= ticket.content_html
 
   .row
@@ -36,7 +30,9 @@ block main
         .form-group.padding
           textarea.form-control#reply-content(name='content', rows='5', required)
       .form-group.padding
-        if ticket.status != 'closed'
+        if ticket.status == 'closed'
+          button(disabled).btn.btn-lg.btn-primary 已关闭
+        else
           button.btn.btn-lg.btn-primary#reply-btn(type='submit')= t('ticket.create_reply')
           button.btn.btn-lg.btn-danger#close-btn= t('ticket.close_ticket')
         if mAccount.inGroup(account, 'root') && (ticket.status == 'open' || ticket.status == 'pending')
