--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -4,7 +4,7 @@ html
     meta(charset='utf-8')
     block head
       link(rel='stylesheet', href='http://cdn.staticfile.org/twitter-bootstrap/3.1.1/css/bootstrap.min.css')
-      link(rel='stylesheet', href='/style/layout/layout.css')
+      link(rel='stylesheet', href='/style/layout.css')
   body
     header.navbar-fixed-top
       .container
