--- a/core/view/admin/index.jade
+++ b/core/view/admin/index.jade
@@ -5,16 +5,51 @@ prepend head
 
 block main
   header= t('admin.admin_panel')
+
+  .modal.fade#crate_payment
+    .modal-dialog
+      .modal-content
+        .modal-header
+          button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+          h4.modal-title 创建充值记录
+        .modal-body
+          form.form-horizontal(method='post', role='form')
+            .form-group
+              label.col-sm-2.col-md-offset-1.control-label(for='amont') 金额
+              .col-sm-5
+                input#amont.form-control(type='text', name='amont', required)
+            .form-group
+              label.col-sm-2.col-md-offset-1.control-label(for='order_id') 订单号
+              .col-sm-5
+                input#order_id.form-control(type='order_id', name='order_id', required)
+
+        .modal-footer
+          button.btn.btn-danger(type='button', data-dismiss='modal') 关闭
+          button.btn.btn-success(type='button') 创建
+
   table.table.table-hover
     thead
       tr
         th= t('account.username')
         th= t('account.email')
+        th 套餐
+        th 余额
+        th 操作
     tbody
       for account in accounts
         tr
           td= account.username
           td= account.email
+          td= account.attribute.plans.join(', ')
+          td= account.attribute.balance.toFixed(2)
+          td
+            .btn-group
+              button(type='button', data-toggle='dropdown').btn.btn-info.btn-sm.dropdown-toggle
+                | 操作
+                spann.caret
+              ul.dropdown-menu
+                li
+                  a(href='#', data-toggle='modal', data-target='#crate_payment') 创建充值记录
 
 prepend sidebar
   .row
