--- a/core/view/panel/pay.jade
+++ b/core/view/panel/pay.jade
@@ -68,3 +68,17 @@ block main
           td
             | 比特币 &nbsp;
             a(href='https://blockchain.info/tx/a4178786707c3f4373be6ad1edb3761cbd4c6a5849c5981f7ceefb13b53cab64') 0.02 BTC
+
+  .row
+    header 扣费记录
+    table.table.table-hover
+      thead
+        tr
+          td 时间
+          td 金额
+          td 摘要
+      tbody
+        tr
+          td 2014-5-1 23:30:05
+          td 0.25 CNY
+          td all, 23 hours, force
